--- a/README
+++ b/README
@@ -1,35 +1,42 @@
-## ---------------------------------------------------------------------------
-##  _  _     ___ _____ ___  ___ ___ 
-## | || |___/ __|_   _/ _ \| _ \ __|
-## | __ |___\__ \ | || (_) |   / _| 
-## |_||_|   |___/ |_| \___/|_|_\___|
-##
-## Next Generation OLTP Database Research
-## ---------------------------------------------------------------------------
+# H-Store
 
-More information and documentation is available at:
+H-Store is an experimental main-memory, parallel database management system that is
+optimized for on-line transaction processing (OLTP) applications. It is a highly
+distributed, row-store-based relational database that runs on a cluster on 
+shared-nothing, main memory executor nodes. 
 
-http://hstore.cs.brown.edu
+More information and documentation is available at: <http://hstore.cs.brown.edu>
 
-## ---------------------------------------------------------------------------
-## QUICK EXAMPLE
-## ---------------------------------------------------------------------------
+## Supported Platforms
+H-Store is known to work on the following platforms.
+Please note that it will not compile on 32-bit systems.
++ Ubuntu Linux 9.10+ (64-bit)
++ Red Hat Enterprise Linux 5.5 (64-bit)
++ Mac OS X 10.6+ (64-bit)
 
-(1) First build the entire distribution:
+## Dependencies
++ [gcc +4.3](http://www.ubuntuupdates.org/gcc)
++ [OpenJDK +1.6](http://www.ubuntuupdates.org/openjdk-7-jdk) (1.7 is recommended)
++ [Ant +1.7](http://www.ubuntuupdates.org/ant)
++ [Python +2.7](http://www.ubuntuupdates.org/python)
++ [Valgrind +3.5](http://www.ubuntuupdates.org/valgrind)
++ [OpenSSH Server](http://www.ubuntuupdates.org/openssh-server) (for automatic deployment)
 
-    $ ant build
+## Quick Start
+1. First build the entire distribution:
+        ant build
 
-(2) Next make the project jar file for the target benchmark.
-    A project jar contains all the of stored procedures and statements for the target
-    benchmark, as well as the cluster configuration for the database system.
+2. Next make the project jar file for the target benchmark.
+   H-Store includes several [benchmarks](http://hstore.cs.brown.edu/doc/deployment/benchmarks/]
+   that are built-in and ready to execute.
+   A project jar contains all the of stored procedures and statements for the target
+   benchmark, as well as the cluster configuration for the database system.
+        export HSTORE_BENCHMARK=tm1
+        ant hstore-prepare -Dproject=$HSTORE_BENCHMARK
 
-    $ export HSTORE_BENCHMARK=tm1
-    $ ant hstore-prepare -Dproject=$HSTORE_BENCHMARK
-
-(3) You can now execute the benchmark locally on your machine with two partitions
-
-    $ ant hstore-benchmark -Dproject=$HSTORE_BENCHMARK
+3. You can now execute the benchmark locally on your machine with two partitions
+        ant hstore-benchmark -Dproject=$HSTORE_BENCHMARK
 
 More information is available here:
 
-http://hstore.cs.brown.edu/documentation/quick-start/
+<http://hstore.cs.brown.edu/doc/quick-start/>
